--- a/src/main/resources/static/common/htmls/sidebar.html
+++ b/src/main/resources/static/common/htmls/sidebar.html
@@ -8,14 +8,15 @@
 			data-ui-sref="lams.dashboard"> <i class="material-icons">dashboard</i>
 				<p>Dashboard</p>
 		</a></li>
-		<!-- <li><a href="javascript:void(0)"> <i
+		<li><a href="javascript:void(0)" data-ui-sref="lams.users"> <i
 				class="material-icons">person</i>
-				<p>User Profile</p>
-		</a></li> -->
-		<li><a href="javascript:void(0)" data-ui-sref="lams.users"> <i class="material-icons">User Management</i>
+				<p>User Management</p>
+		</a></li>
+		<li>
+		<!-- <a href="javascript:void(0)" data-ui-sref="lams.users"> <i class="material-icons">content_paste</i>
 				<p>Table List</p>
 		</a></li>
-		<!-- 		<li><a href="javascript:void(0)"> <i class="material-icons">library_books</i>
+				<li><a href="javascript:void(0)"> <i class="material-icons">library_books</i>
 				<p>Typography</p>
 		</a></li>
 		<li><a href="javascript:void(0)"> <i class="material-icons">bubble_chart</i>
