added users list

--- a/src/main/resources/static/common/htmls/sidebar.html
+++ b/src/main/resources/static/common/htmls/sidebar.html
@@ -4,11 +4,11 @@
 </div>
 <div class="sidebar-wrapper">
 	<ul class="nav">
-		<li class="active"><a href="javascript:void(0)"
+		<li data-ui-sref-active="active"><a href="javascript:void(0)"
 			data-ui-sref="lams.dashboard"> <i class="material-icons">dashboard</i>
 				<p>Dashboard</p>
 		</a></li>
-		<li><a href="javascript:void(0)" data-ui-sref="lams.users"> <i
+		<li data-ui-sref-active="active"><a href="javascript:void(0)" data-ui-sref="lams.users"> <i
 				class="material-icons">person</i>
 				<p>User Management</p>
 		</a></li>
