--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -133,7 +133,7 @@
 	</script>
 </head>
 <body>
-	<div data-ui-view></div>
+	<div data-ui-view=""></div>
 	<div class="wrapper">
 		<div class="sidebar" data-color="purple"
 			data-image="../assets/img/sidebar-1.jpg" data-ui-view="sidebar"></div>
