Configuration Related Chaneg

--- a/src/main/resources/static/common/htmls/sidebar.html
+++ b/src/main/resources/static/common/htmls/sidebar.html
@@ -5,10 +5,10 @@
 <div class="sidebar-wrapper">
 	<ul class="nav">
 		<li data-ui-sref-active="active"><a href="javascript:void(0)"
-			data-ui-sref="main.lams.dashboard"> <i class="material-icons">dashboard</i>
+			data-ui-sref="admin.lams.dashboard"> <i class="material-icons">dashboard</i>
 				<p>Dashboard</p>
 		</a></li>
-		<li data-ui-sref-active="active"><a href="javascript:void(0)" data-ui-sref="main.lams.users"> <i
+		<li data-ui-sref-active="active"><a href="javascript:void(0)" data-ui-sref="admin.lams.users"> <i
 				class="material-icons">person</i>
 				<p>User Management</p>
 		</a></li>
