--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,9 +18,10 @@
 	rel="stylesheet" />
 <link href="../assets/css/demo.css" rel="stylesheet" />
 <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
-<link
-	href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons'
-	rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="../assets/css/angular-toastr.css" />
+<link href='../assets/css/material-icons.css' rel='stylesheet' type='text/css'>
+
+<!-- Common Assets -->
 <script src="../assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="../assets/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="../assets/js/material.min.js" type="text/javascript"></script>
@@ -30,22 +31,30 @@
 <script src="../assets/js/bootstrap-notify.js"></script>
 <script src="../assets/js/material-dashboard.js?v=1.2.0"></script>
 <script src="../assets/js/demo.js"></script>
+
+<!-- Angular js Files -->
 <script src="../assets/js/angular/angular.min.js"></script>
 <script src="../assets/js/angular/angular-ui-router.min.js"></script>
 <script src="../assets/js/angular/angular-cookies.js"></script>
 <script src="../assets/js/angular/angular-messages.js"></script>
+<script src="../assets/js/angular/angular-toastr.tpls.js"></script>
+
+<!-- Application File -->
 <script src="lamsAdminApp.js"></script>
-<script src="common/controllers/loginCtrl.js"></script>
+
+<!-- Constant file -->
 <script src="common/utils/lamsConstant.js"></script>
+
+<!-- Common Services -->
 <script src="common/services/userService.js"></script>
 <script src="common/services/httpService.js"></script>
 <script src="common/services/commonServices.js"></script>
 <script src="common/directives/commonDirectives.js"></script>
+
+<!-- Controllers -->
 <script src="dashboard/dashboardCtrl.js"></script>
 <script src="usermanagement/usersCtrl.js"></script>
-
-<script src="../assets/js/angular/angular-toastr.tpls.js"></script>
-<link rel="stylesheet" href="../assets/css/angular-toastr.css" />
+<script src="common/controllers/loginCtrl.js"></script>
 
 
 <script type="text/ng-template" id="error-messages">
