--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,6 @@
 <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="../assets/css/angular-toastr.css" />
 <link href='../assets/css/material-icons.css' rel='stylesheet' type='text/css'>
-
 <!-- Common Assets -->
 <script src="../assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="../assets/js/bootstrap.min.js" type="text/javascript"></script>
@@ -38,7 +37,7 @@
 <script src="../assets/js/angular/angular-cookies.js"></script>
 <script src="../assets/js/angular/angular-messages.js"></script>
 <script src="../assets/js/angular/angular-toastr.tpls.js"></script>
-
+<script src="../assets/js/ui-bootstrap-tpls-2.5.0.min.js"></script>
 <!-- Application File -->
 <script src="lamsAdminApp.js"></script>
 
@@ -46,10 +45,12 @@
 <script src="common/utils/lamsConstant.js"></script>
 
 <!-- Common Services -->
-<script src="common/services/userService.js"></script>
+<script src="common/filter/filter.js"></script>
 <script src="common/services/httpService.js"></script>
+<script src="common/services/userService.js"></script>
 <script src="common/services/commonServices.js"></script>
 <script src="common/directives/commonDirectives.js"></script>
+
 
 <!-- Controllers -->
 <script src="dashboard/dashboardCtrl.js"></script>
@@ -141,7 +142,7 @@
         </div>
 	</script>
 </head>
-<body>
+<body ng-cloak>
 	<div data-ui-view=""></div>
 </body>
 </html>
