--- a/src/main/resources/static/usermanagement/users.html
+++ b/src/main/resources/static/usermanagement/users.html
@@ -1,33 +1,168 @@
+
 <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="card">
-                                <div class="card-header" data-background-color="purple">
-                                    <h4 class="title">User</h4>
-                                    <p class="category">You can see all the Registered users here.</p>
-                                </div>
-                                <div class="card-content table-responsive">
-                                    <table class="table">
-                                        <thead class="text-primary">
-                                            <th>Name</th>
-                                            <th>Email</th>
-                                            <th>Mobile</th>
-                                            <th>Active</th>
-                                        </thead>
-                                        <tbody>
-                                        <tr data-ng-repeat="user in users">
-                                        	<td>{{user.name || Constant.NA}}</td>
-                                        	<td>{{user.email || Constant.NA}}</td>
-                                        	<td>{{user.mobile || Constant.NA}}</td>
-                                        	<td>{{user.isActive ? 'Yes': 'No'}}</td>
-                                        </tr>
-                                            <tr data-ng-if="isEmpty(users)">
-                                            <td colspan="4" class="alert alert-default text-center"> No Users are registered Yet!</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="card">
+				<div class="card-header" data-background-color="purple">
+					<h4 class="title">User</h4>
+					<p class="category">You can see all the Registered users here.</p>
+				</div>
+				<br />
+				<div class="col-md-12">
+					<uib-tabset active="activeJustified" justified="true">
+					<uib-tab index="0" heading="Lender"
+						ng-click="getUsers(Constant.UserType.LENDER.id)">
+					<div class="container-fluid">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="card">
+									<!-- <div class="card-header" data-background-color="purple">
+										<h4 class="title">
+											<b>Profile </b></a>
+										</h4>
+										<p class="category">
+											<b>Update Additional Details in Profile</b>
+										</p>
+									</div> -->
+									<div class="card-content">
+										<form name="forms.lenderForm" data-ng-submit="updateLenderDetails()"
+											novalidate>
+											<div class="row">
+												<div class="col-md-3">
+													<div class="form-group">
+														<label class="control-label">Email address</label> <input
+															type="email" name="email" class="form-control"
+															data-ng-model="userData.email" required>
+													</div>
+												</div>
+												<div class="col-md-3">
+													<div class="form-group">
+														<label class="control-label">Mobile</label> <input
+															type="text" name="mobile" class="form-control"
+															data-ng-model="userData.mobile" required>
+													</div>
+												</div>
+
+												<div class="col-md-3">
+													<div class="form-group">
+													<label class="control-label">Password</label> <input
+															type="password" name="password" class="form-control"
+															data-ng-model="userData.password" required>
+													</div>
+												</div>
+												<div class="col-md-3">
+													<div class="form-group">
+													<label class="control-label">Confirm Password</label> <input
+															type="password" name="confirmPassword" class="form-control"
+															data-ng-model="userData.confirmPassword" required>
+													</div>
+												</div>
+											</div>
+											<div class="row">
+												<div class="col-md-3">
+													<div class="form-group">
+														<label class="control-label">Salutation</label> <input
+															type="text" name="salutation" class="form-control"
+															data-ng-model="userData.salutation" required>
+													</div>
+												</div>
+
+												<div class="col-md-3">
+													<div class="form-group">
+														<label class="control-label">First Name</label> <input
+															type="text" name="firstName" class="form-control"
+															data-ng-model="userData.firstName" required>
+													</div>
+												</div>
+
+												<div class="col-md-3">
+													<div class="form-group">
+														<label class="control-label">Middle Name</label> <input
+															type="text" name="middleName" class="form-control"
+															data-ng-model="userData.middleName" required>
+													</div>
+												</div>
+
+												<div class="col-md-3">
+													<div class="form-group">
+														<label class="control-label">Last Name</label> <input
+															type="text" name="lastName" class="form-control"
+															data-ng-model="userData.lastName" required>
+													</div>
+												</div>
+											</div>
+											<div class="row">
+												<div class="col-md-8"></div>
+												<div class="col-md-4 ">
+													<button type="submit"  class="btn btn-primary pull-right">Submit</button>
+												</div>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="card-content table-responsive">
+						<table class="table">
+							<thead class="text-primary">
+								<th>Sr No.</th>
+								<th>Lender Name</th>
+								<th>Email</th>
+								<th>Mobile</th>
+								<th>FirstName</th>
+								<th>LastName</th>
+								<th>Active</th>
+								<th>Edit</th>
+							</thead>
+							<tbody>
+								<tr data-ng-repeat="user in users">
+									<td>{{$index + 1}}</td>
+									<td>{{user.name || Constant.NA}}</td>
+									<td>{{user.email || Constant.NA}}</td>
+									<td>{{user.mobile || Constant.NA}}</td>
+									<td>{{user.firstName || Constant.NA}}</td>
+									<td>{{user.lastName || Constant.NA}}</td>
+									<td> <is-active status="{{user.isActive}}"></is-active> </td>
+									<td><button type="button" class="btn btn-primary btn-sm" ng-click="editUserData(user)">Edit</button></td>
+								</tr>
+								<tr data-ng-if="isEmpty(users)">
+									<td colspan="4" class="alert alert-default text-center">No
+										Users are registered Yet!</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					</uib-tab> <uib-tab index="1" heading="Borrower"
+						ng-click="getUsers(Constant.UserType.BORROWER.id)">
+					<div class="card-content table-responsive">
+						<table class="table">
+							<thead class="text-primary">
+								<th>Sr No.</th>
+								<th>Lender Name</th>
+								<th>Email</th>
+								<th>Mobile</th>
+								<th>Active</th>
+							</thead>
+							<tbody>
+								<tr data-ng-repeat="user in users">
+									<td>{{$index + 1}}</td>
+									<td>{{user.name || Constant.NA}}</td>
+									<td>{{user.email || Constant.NA}}</td>
+									<td>{{user.mobile || Constant.NA}}</td>
+									<td>{{user.isActive ? 'Yes': 'No'}}</td>
+								</tr>
+								<tr data-ng-if="isEmpty(users)">
+									<td colspan="4" class="alert alert-default text-center">No
+										Users are registered Yet!</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					</uib-tab> </uib-tabset>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
