--- a/src/main/resources/static/usermanagement/users.html
+++ b/src/main/resources/static/usermanagement/users.html
@@ -143,7 +143,7 @@
 										<td><button type="button" class="btn btn-primary btn-sm"
 												ng-click="editUserData(user)">Edit</button>
 											<button type="button" class="btn btn-primary btn-sm"
-												ng-click="inviteLender(user)">Invite</button></td>
+												ng-click="inviteLender(user,$index)">Invite</button></td>
 									</tr>
 									<tr data-ng-if="isEmpty(users)">
 										<td colspan="9" class="alert alert-default text-center">No
