--- a/src/main/resources/static/common/htmls/sidebar.html
+++ b/src/main/resources/static/common/htmls/sidebar.html
@@ -8,9 +8,13 @@
 			data-ui-sref="admin.lams.dashboard"> <i class="material-icons">dashboard</i>
 				<p>Dashboard</p>
 		</a></li>
-		<li data-ui-sref-active="active"><a href="javascript:void(0)" data-ui-sref="admin.lams.users"> <i
+		<li data-ui-sref-active="active"><a href="javascript:void(0)" data-ui-sref="admin.lams.lenders"> <i
 				class="material-icons">person</i>
-				<p>User Management</p>
+				<p>Lenders</p>
+		</a></li>
+		<li data-ui-sref-active="active"><a href="javascript:void(0)" data-ui-sref="admin.lams.borrowers"> <i
+				class="material-icons">person</i>
+				<p>Borrowers</p>
 		</a></li>
 		<li>
 		<!-- <a href="javascript:void(0)" data-ui-sref="lams.users"> <i class="material-icons">content_paste</i>
