--- a/src/main/resources/static/usermanagement/borrowers.html
+++ b/src/main/resources/static/usermanagement/borrowers.html
@@ -5,37 +5,49 @@
 			<div class="card">
 				<div class="card-header" data-background-color="purple">
 					<h4 class="title">Borrowers</h4>
-					<p class="category">List of Borrowers are registered in the System</p>
+					<p class="category">List of Borrowers are registered in the
+						System</p>
 				</div>
 				<br />
 				<div class="col-md-12">
-					<div class="card-content table-responsive">
-						<table class="table">
-							<thead class="text-primary">
-								<tr>
-									<th>Sr No.</th>
-									<th>Borrower Name</th>
-									<th>Email</th>
-									<th>Mobile</th>
-									<th>Active</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr data-ng-repeat="user in users">
-									<td>{{$index + 1}}</td>
-									<td>{{ (!isEmpty(user.firstName) &&
-										!isEmpty(user.lastName) ? user.firstName + ' ' + user.lastName
-										: user.firstName || Constant.NA )}}</td>
-									<td>{{user.email || Constant.NA}}</td>
-									<td>{{user.mobile || Constant.NA}}</td>
-									<td><is-active status="{{user.isActive}}"></is-active></td>
-								</tr>
-								<tr data-ng-if="isEmpty(users)">
-									<td colspan="5" class="alert alert-default text-center">No
-										Users are registered Yet!</td>
-								</tr>
-							</tbody>
-						</table>
+					<div class="panel panel-default">
+						<div class="panel-body">
+							<span>Borrowers  <span class="badge">{{users.length}}</span></span>
+						</div>
+
+						<div class="card-content table-responsive">
+							<table class="table">
+								<thead class="text-primary">
+									<tr>
+										<th colspan="5"><input type="text" name="searchData"
+											class="form-control" data-ng-model="searchBorrower"
+											placeholder="Type anything to search Borrower"></th>
+									</tr>
+									<tr>
+										<th>Sr No.</th>
+										<th>Borrower Name</th>
+										<th>Email</th>
+										<th>Mobile</th>
+										<th>Active</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr data-ng-repeat="user in users | filter : searchBorrower">
+										<td>{{$index + 1}}</td>
+										<td>{{ (!isEmpty(user.firstName) &&
+											!isEmpty(user.lastName) ? user.firstName + ' ' +
+											user.lastName : user.firstName || Constant.NA )}}</td>
+										<td>{{user.email || Constant.NA}}</td>
+										<td>{{user.mobile || Constant.NA}}</td>
+										<td><is-active status="{{user.isActive}}"></is-active></td>
+									</tr>
+									<tr data-ng-if="isEmpty(users)">
+										<td colspan="5" class="alert alert-default text-center">No
+											Users are registered Yet!</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
 					</div>
 				</div>
 			</div>
