Implemented lazy load and loader.

--- a/src/main/resources/static/usermanagement/lenders.html
+++ b/src/main/resources/static/usermanagement/lenders.html
@@ -1,7 +1,7 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-12 col-sm-12">
 			<div class="card">
 				<div class="card-header" data-background-color="purple">
 					<h4 class="title">Lender</h4>
@@ -9,7 +9,7 @@
 						System</p>
 				</div>
 				<br />
-				<div class="col-md-12">
+				<div class="col-md-12 col-sm-12">
 					<div class="panel panel-default">
 						<div class="panel-body">
 							<span>Lenders  <span class="badge">{{users.length}}</span></span>
