--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -4,9 +4,10 @@
 	<div class="main-panel">
 		<nav class="navbar navbar-transparent navbar-absolute"
 			data-ui-view="header"></nav>
-			Here is Processs BAR
-			<div process-loader></div>
+<!-- 			<div process-loader></div> -->
+
 		<div class="content" data-ui-view="content"></div>
+		
 		<footer class="footer" data-ui-view="footer"> </footer>
 	</div>
 </div>
