--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,9 +17,11 @@
 <link href="../assets/css/material-dashboard.css?v=1.2.0"
 	rel="stylesheet" />
 <link href="../assets/css/demo.css" rel="stylesheet" />
+<link href="../assets/css/loading-bar.min.css" rel="stylesheet" />
 <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="../assets/css/angular-toastr.css" />
 <link href='../assets/css/material-icons.css' rel='stylesheet' type='text/css'>
+
 <!-- Common Assets -->
 <script src="../assets/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="../assets/js/bootstrap.min.js" type="text/javascript"></script>
@@ -38,6 +40,9 @@
 <script src="../assets/js/angular/angular-messages.js"></script>
 <script src="../assets/js/angular/angular-toastr.tpls.js"></script>
 <script src="../assets/js/ui-bootstrap-tpls-2.5.0.min.js"></script>
+<script src="../assets/js/loading-bar.min.js"></script>
+<script src="../assets/js/angular/ocLazyLoad.js"></script>
+
 <!-- Application File -->
 <script src="lamsAdminApp.js"></script>
 
@@ -54,9 +59,9 @@
 
 
 <!-- Controllers -->
-<script src="dashboard/dashboardCtrl.js"></script>
-<script src="usermanagement/lendersCtrl.js"></script>
-<script src="usermanagement/borrowersCtrl.js"></script>
+<!-- <script src="dashboard/dashboardCtrl.js"></script> -->
+<!-- <script src="usermanagement/lendersCtrl.js"></script> -->
+<!-- <script src="usermanagement/borrowersCtrl.js"></script> -->
 <script src="common/controllers/loginCtrl.js"></script>
 
 
