--- a/src/main/resources/static/usermanagement/lenders.html
+++ b/src/main/resources/static/usermanagement/lenders.html
@@ -75,7 +75,7 @@
 											<div class="col-md-3">
 												<div class="form-group">
 													<label class="control-label">Email address <span
-														class="text-danger">*</span></label> <input type="email"
+														class="text-danger">*</span></label> <input id="userEmail" type="email"
 														name="email" class="form-control"
 														data-ng-model="userData.email" required>
 												</div>
@@ -161,7 +161,7 @@
 												<div class="form-group">
 													<label class="control-label">Application<span
 														class="text-danger">*</span></label> <select class="form-control"
-														data-ng-model="userData.applications[0].applicationTypeId"
+														data-ng-model="userData.applicationTypeId"
 														data-ng-options="appType.id as appType.name for appType in applicationTypes"
 														required>
 														<option value="">Select Application</option>
