Borrower and lender profiles implemented in Admin

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,7 @@
 <script src="../assets/js/material-dashboard.js?v=1.2.0"></script>
 <script src="../assets/js/demo.js"></script>
 
+
 <!-- Angular js Files -->
 <script src="../assets/js/angular/angular.min.js"></script>
 <script src="../assets/js/angular/angular-ui-router.min.js"></script>
@@ -42,6 +43,7 @@
 <script src="../assets/js/ui-bootstrap-tpls-2.5.0.min.js"></script>
 <script src="../assets/js/loading-bar.min.js"></script>
 <script src="../assets/js/angular/ocLazyLoad.js"></script>
+<script src="../assets/js/ng-table.min.js"></script>
 
 <!-- Application File -->
 <script src="lamsAdminApp.js"></script>
@@ -55,6 +57,7 @@
 <script src="common/services/httpService.js"></script>
 <script src="common/services/userService.js"></script>
 <script src="common/services/commonServices.js"></script>
+<!-- <script src="common/services/userService.js"></script> -->
 <script src="common/directives/commonDirectives.js"></script>
 
 
