Channel partner List done

--- a/src/main/resources/static/common/htmls/sidebar.html
+++ b/src/main/resources/static/common/htmls/sidebar.html
@@ -1,6 +1,6 @@
 
 <div class="logo">
-	<h2 class="text-center">LAMS</h2>
+	<h2 class="text-center">Admin Panel</h2>
 </div>
 <div class="sidebar-wrapper">
 	<ul class="nav">
@@ -15,6 +15,11 @@
 		<li data-ui-sref-active="active"><a href="javascript:void(0)" data-ui-sref="admin.lams.borrowers"> <i
 				class="material-icons">person</i>
 				<p>Borrowers</p>
+		</a>
+		</li>
+		<li data-ui-sref-active="active"><a href="javascript:void(0)" data-ui-sref="admin.lams.channelPartners"> <i
+				class="material-icons">person</i>
+				<p>Channel Partners</p>
 		</a>
 		</li>
 <!-- 		<li> -->
