--- a/src/main/resources/static/usermanagement/lenders.html
+++ b/src/main/resources/static/usermanagement/lenders.html
@@ -170,7 +170,7 @@
                         {{ (!isEmpty(user.firstName) && !isEmpty(user.lastName) ? user.firstName + ' ' + user.lastName : user.firstName || Constant.NA )}}
                         </td>
                         <td>{{user.email || Constant.NA}}</td>
-                        <td>{{user.email || Constant.NA}}</td>
+                        <td>{{user.mobile || Constant.NA}}</td>
                         <td>{{user.bank.name || Constant.NA}}</td>
                         <td>{{user.applications[0].applicationTypeName || Constant.NA}}</td>
                         <th>{{user.invitationCount || 0}}</th>
