--- a/src/main/resources/static/usermanagement/channelPartners.html
+++ b/src/main/resources/static/usermanagement/channelPartners.html
@@ -44,7 +44,7 @@
                     	<td><button ui-sref="admin.lams.channelPartnerProfile({cpId:user.id})" class="btn btn-sm btm-primary">View</button></td>
                     </tr>
                     <tr ng-if="$data.length===0">
-                    	<td colspan="10">Data not found</td>
+                    	<td colspan="10" class="text-center">No Channel Partner Exist in the System.</td>
                     </tr>									
 								</tbody>
 							</table>
