--- a/src/main/resources/static/usermanagement/borrowers.html
+++ b/src/main/resources/static/usermanagement/borrowers.html
@@ -35,9 +35,12 @@
 								<tbody>
 									<tr ng-repeat="user in $data">
                         <td>{{$index + 1}}</td>
-                        <td>
-                        {{user.name || Constant.NA}}
-                        </td>
+                        <td>{{(!isEmpty(user.firstName)
+							&& !isEmpty(user.lastName) ?
+							user.firstName + ' ' +
+							user.lastName :
+							user.firstName || Constant.NA
+							)}}</td>
                         <td>{{user.email || Constant.NA}}</td>
                         <td>{{user.mobile || Constant.NA}}</td>
                         <td><is-active status="{{user.isActive}}"></is-active></td>
