--- a/src/main/resources/static/usermanagement/borrowers.html
+++ b/src/main/resources/static/usermanagement/borrowers.html
@@ -33,14 +33,9 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr ng-repeat="user in $data">
+									<tr data-ng-repeat="user in $data">
                         <td>{{$index + 1}}</td>
-                        <td>{{(!isEmpty(user.firstName)
-							&& !isEmpty(user.lastName) ?
-							user.firstName + ' ' +
-							user.lastName :
-							user.firstName || Constant.NA
-							)}}</td>
+                        <td>{{getFullName(user)}}</td>
                         <td>{{user.email || Constant.NA}}</td>
                         <td>{{user.mobile || Constant.NA}}</td>
                         <td><is-active status="{{user.isActive}}"></is-active></td>
